--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.6.0",
     "next": "^14.2.2",
     "next-auth": "^4.24.7",
+    "pino": "^9.4.0",
     "react": "^18.2.0",
     "react-dom": "^18",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
